2015-12-15  SilverNexus
	* main.c: Moved output of messages to stderr to make room for stdout output.
	* output.c: Added check for printing to stdout.
	* settings.h: Added flag for printing to stdout.
	* settings.c: Implemented default value (0) for stdout output.
	* parseArgs.c: Added parsing for -O and --stdout flags. Also updated help message.
	* README: Updated usage information.

2015-11-04  SilverNexus
    * main.c: Added signal handling to output results found at SIGINT.
    * output.*: Moved the result output code to its own function.
    * Makefile.am: Add output.c to the build.

2015-11-02  SilverNexus
	* search.c: Implemented support for specific path search exclusions.
	  Then proceeded to refactor path search to allow for specific files to be excluded.
	* settings.h: Added a variable to store the length of the base search path.
	* settings.c: Initialize the search path length to zero.
	* parseArgs.c: Add support for parsing -X flag.
	  Added informtion about -X to the help message
	* main.c: Ensure the base path length is reset between different search root traversals.
	* README: Added information about -X flag.

2015-10-27  SilverNexus
	* configure.ac: Made a configure flag to enable debugging.
	* Makefile.am: Set up flags for debug and nondebug modes.
	* search.c: Fix a crash that would occur if directories were excluded.

2015-06-08  SilverNexus
	* search.c: Loop optimization in the file search section.

2015-06-03  SilverNexus
	* search.c: Refactor check for failure to load output file to occur
	  only if the file was just loaded.
	* configure.ac: Bump version to 0.02-dev.
	* Makefile.am: Add new file result_list.c.
	* main.c: Implement delayed recording of results.
	* search.c: Defer recording of results to after the directory tree is searched.
	  This solves a bug involving fileperuser writing to the results file while reading from it.
	* TODO: Removed statement about the bug mentioned above, as it is resolved.